@@ -10,16 +10,21 @@ import com.google.common.collect.ImmutableSet;
 import com.linkedin.common.InputField;
 import com.linkedin.common.InputFields;
 import com.linkedin.common.Status;
+import com.linkedin.common.UrnArray;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
 import com.linkedin.data.template.RecordTemplate;
+import com.linkedin.datajob.DataJobInputOutput;
 import com.linkedin.dataset.FineGrainedLineage;
+import com.linkedin.dataset.FineGrainedLineageArray;
 import com.linkedin.dataset.UpstreamLineage;
-import com.linkedin.entity.client.SystemEntityClient;
 import com.linkedin.events.metadata.ChangeType;
 import com.linkedin.metadata.Constants;
-import com.linkedin.metadata.aspect.batch.MCLBatchItem;
-import com.linkedin.metadata.entity.ebean.batch.MCLBatchItemImpl;
+import com.linkedin.metadata.aspect.AspectRetriever;
+import com.linkedin.metadata.aspect.batch.AspectsBatch;
+import com.linkedin.metadata.aspect.batch.MCLItem;
+import com.linkedin.metadata.entity.SearchIndicesService;
+import com.linkedin.metadata.entity.ebean.batch.MCLItemImpl;
 import com.linkedin.metadata.graph.Edge;
 import com.linkedin.metadata.graph.GraphIndexUtils;
 import com.linkedin.metadata.graph.GraphService;
@@ -43,6 +48,7 @@ import com.linkedin.metadata.timeseries.transformer.TimeseriesAspectTransformer;
 import com.linkedin.metadata.utils.EntityKeyUtils;
 import com.linkedin.mxe.MetadataChangeLog;
 import com.linkedin.mxe.SystemMetadata;
+import com.linkedin.structured.StructuredPropertyDefinition;
 import com.linkedin.util.Pair;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
@@ -63,24 +69,30 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 
 @Slf4j
-public class UpdateIndicesService {
+public class UpdateIndicesService implements SearchIndicesService {
   private static final String DOWNSTREAM_OF = "DownstreamOf";
 
   private final GraphService _graphService;
   private final EntitySearchService _entitySearchService;
   private final TimeseriesAspectService _timeseriesAspectService;
   private final SystemMetadataService _systemMetadataService;
-  private final EntityRegistry _entityRegistry;
   private final SearchDocumentTransformer _searchDocumentTransformer;
   private final EntityIndexBuilders _entityIndexBuilders;
 
-  private SystemEntityClient systemEntityClient;
+  private AspectRetriever aspectRetriever;
+  private EntityRegistry _entityRegistry;
 
   @Value("${featureFlags.graphServiceDiffModeEnabled:true}")
   private boolean _graphDiffMode;
 
   @Value("${featureFlags.searchServiceDiffModeEnabled:true}")
   private boolean _searchDiffMode;
+
+  @Value("${structuredProperties.enabled}")
+  private boolean _structuredPropertiesHookEnabled;
+
+  @Value("${structuredProperties.writeEnabled}")
+  private boolean _structuredPropertiesWriteEnabled;
 
   private static final Set<ChangeType> UPDATE_CHANGE_TYPES =
       ImmutableSet.of(ChangeType.UPSERT, ChangeType.RESTATE, ChangeType.PATCH);
@@ -100,38 +112,31 @@ public class UpdateIndicesService {
       EntitySearchService entitySearchService,
       TimeseriesAspectService timeseriesAspectService,
       SystemMetadataService systemMetadataService,
-      EntityRegistry entityRegistry,
       SearchDocumentTransformer searchDocumentTransformer,
       EntityIndexBuilders entityIndexBuilders) {
     _graphService = graphService;
     _entitySearchService = entitySearchService;
     _timeseriesAspectService = timeseriesAspectService;
     _systemMetadataService = systemMetadataService;
-    _entityRegistry = entityRegistry;
     _searchDocumentTransformer = searchDocumentTransformer;
     _entityIndexBuilders = entityIndexBuilders;
   }
 
+  @Override
   public void handleChangeEvent(@Nonnull final MetadataChangeLog event) {
     try {
-      MCLBatchItemImpl batch =
-          MCLBatchItemImpl.builder().build(event, _entityRegistry, systemEntityClient);
+      MCLItemImpl batch = MCLItemImpl.builder().build(event, aspectRetriever);
 
-      Stream<MCLBatchItem> sideEffects =
-          _entityRegistry
-              .getMCLSideEffects(
-                  event.getChangeType(), event.getEntityType(), event.getAspectName())
-              .stream()
-              .flatMap(
-                  mclSideEffect ->
-                      mclSideEffect.apply(List.of(batch), _entityRegistry, systemEntityClient));
+      Stream<MCLItem> sideEffects =
+          AspectsBatch.applyMCLSideEffects(List.of(batch), aspectRetriever);
 
-      for (MCLBatchItem mclBatchItem : Stream.concat(Stream.of(batch), sideEffects).toList()) {
-        MetadataChangeLog hookEvent = mclBatchItem.getMetadataChangeLog();
+      for (MCLItem mclItem :
+          Stream.concat(Stream.of(batch), sideEffects).collect(Collectors.toList())) {
+        MetadataChangeLog hookEvent = mclItem.getMetadataChangeLog();
         if (UPDATE_CHANGE_TYPES.contains(hookEvent.getChangeType())) {
-          handleUpdateChangeEvent(mclBatchItem);
+          handleUpdateChangeEvent(mclItem);
         } else if (hookEvent.getChangeType() == ChangeType.DELETE) {
-          handleDeleteChangeEvent(mclBatchItem);
+          handleDeleteChangeEvent(mclItem);
         }
       }
     } catch (IOException e) {
@@ -148,14 +153,14 @@ public class UpdateIndicesService {
    *
    * @param event the change event to be processed.
    */
-  private void handleUpdateChangeEvent(@Nonnull final MCLBatchItem event) throws IOException {
+  private void handleUpdateChangeEvent(@Nonnull final MCLItem event) throws IOException {
 
     final EntitySpec entitySpec = event.getEntitySpec();
     final AspectSpec aspectSpec = event.getAspectSpec();
     final Urn urn = event.getUrn();
 
-    RecordTemplate aspect = event.getAspect();
-    RecordTemplate previousAspect = event.getPreviousAspect();
+    RecordTemplate aspect = event.getRecordTemplate();
+    RecordTemplate previousAspect = event.getPreviousRecordTemplate();
 
     // Step 0. If the aspect is timeseries, add to its timeseries index.
     if (aspectSpec.isTimeseries()) {
@@ -173,11 +178,14 @@ public class UpdateIndicesService {
       updateSystemMetadata(event.getSystemMetadata(), urn, aspectSpec, aspect);
     }
 
-    // Step 1. For all aspects, attempt to update Search
+    // Step 1. Handle StructuredProperties Index Mapping changes
+    updateIndexMappings(entitySpec, aspectSpec, aspect, previousAspect);
+
+    // Step 2. For all aspects, attempt to update Search
     updateSearchService(
         entitySpec.getName(), urn, aspectSpec, aspect, event.getSystemMetadata(), previousAspect);
 
-    // Step 2. For all aspects, attempt to update Graph
+    // Step 3. For all aspects, attempt to update Graph
     SystemMetadata systemMetadata = event.getSystemMetadata();
     if (_graphDiffMode
         && !(_graphService instanceof DgraphGraphService)
@@ -187,6 +195,46 @@ public class UpdateIndicesService {
       updateGraphServiceDiff(urn, aspectSpec, previousAspect, aspect, event.getMetadataChangeLog());
     } else {
       updateGraphService(urn, aspectSpec, aspect, event.getMetadataChangeLog());
+    }
+  }
+
+  public void updateIndexMappings(
+      EntitySpec entitySpec,
+      AspectSpec aspectSpec,
+      RecordTemplate newValue,
+      RecordTemplate oldValue)
+      throws IOException {
+    if (_structuredPropertiesHookEnabled
+        && STRUCTURED_PROPERTY_ENTITY_NAME.equals(entitySpec.getName())
+        && STRUCTURED_PROPERTY_DEFINITION_ASPECT_NAME.equals(aspectSpec.getName())) {
+
+      UrnArray oldEntityTypes =
+          Optional.ofNullable(oldValue)
+              .map(
+                  recordTemplate ->
+                      new StructuredPropertyDefinition(recordTemplate.data()).getEntityTypes())
+              .orElse(new UrnArray());
+
+      StructuredPropertyDefinition newDefinition =
+          new StructuredPropertyDefinition(newValue.data());
+      newDefinition.getEntityTypes().removeAll(oldEntityTypes);
+
+      if (newDefinition.getEntityTypes().size() > 0) {
+        _entityIndexBuilders
+            .buildReindexConfigsWithNewStructProp(newDefinition)
+            .forEach(
+                reindexState -> {
+                  try {
+                    log.info(
+                        "Applying new structured property {} to index {}",
+                        newDefinition,
+                        reindexState.name());
+                    _entityIndexBuilders.getIndexBuilder().applyMappings(reindexState, false);
+                  } catch (IOException e) {
+                    throw new RuntimeException(e);
+                  }
+                });
+      }
     }
   }
 
@@ -202,7 +250,7 @@ public class UpdateIndicesService {
    *
    * @param event the change event to be processed.
    */
-  private void handleDeleteChangeEvent(@Nonnull final MCLBatchItem event) {
+  private void handleDeleteChangeEvent(@Nonnull final MCLItem event) {
 
     final EntitySpec entitySpec = event.getEntitySpec();
     final Urn urn = event.getUrn();
@@ -215,7 +263,7 @@ public class UpdateIndicesService {
               urn.getEntityType(), event.getAspectName()));
     }
 
-    RecordTemplate aspect = event.getAspect();
+    RecordTemplate aspect = event.getRecordTemplate();
     Boolean isDeletingKey = event.getAspectName().equals(entitySpec.getKeyAspectName());
 
     if (!aspectSpec.isTimeseries()) {
@@ -228,21 +276,36 @@ public class UpdateIndicesService {
 
   // TODO: remove this method once we implement sourceOverride when creating graph edges
   private void updateFineGrainedEdgesAndRelationships(
-      RecordTemplate aspect,
+      Urn entity,
+      FineGrainedLineageArray fineGrainedLineageArray,
       List<Edge> edgesToAdd,
       HashMap<Urn, Set<String>> urnToRelationshipTypesBeingAdded) {
-    UpstreamLineage upstreamLineage = new UpstreamLineage(aspect.data());
-    if (upstreamLineage.getFineGrainedLineages() != null) {
-      for (FineGrainedLineage fineGrainedLineage : upstreamLineage.getFineGrainedLineages()) {
+    if (fineGrainedLineageArray != null) {
+      for (FineGrainedLineage fineGrainedLineage : fineGrainedLineageArray) {
         if (!fineGrainedLineage.hasDownstreams() || !fineGrainedLineage.hasUpstreams()) {
           break;
         }
+        // Fine grained lineage array is present either on datajob (datajob input/output) or dataset
+        // We set the datajob as the viaEntity in scenario 1, and the query (if present) as the
+        // viaEntity in scenario 2
+        Urn viaEntity =
+            entity.getEntityType().equals("dataJob") ? entity : fineGrainedLineage.getQuery();
         // for every downstream, create an edge with each of the upstreams
         for (Urn downstream : fineGrainedLineage.getDownstreams()) {
           for (Urn upstream : fineGrainedLineage.getUpstreams()) {
             // TODO: add edges uniformly across aspects
             edgesToAdd.add(
-                new Edge(downstream, upstream, DOWNSTREAM_OF, null, null, null, null, null));
+                new Edge(
+                    downstream,
+                    upstream,
+                    DOWNSTREAM_OF,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    entity,
+                    viaEntity));
             Set<String> relationshipTypes =
                 urnToRelationshipTypesBeingAdded.getOrDefault(downstream, new HashSet<>());
             relationshipTypes.add(DOWNSTREAM_OF);
@@ -310,12 +373,23 @@ public class UpdateIndicesService {
     // inputFields
     // since @Relationship only links between the parent entity urn and something else.
     if (aspectSpec.getName().equals(Constants.UPSTREAM_LINEAGE_ASPECT_NAME)) {
-      updateFineGrainedEdgesAndRelationships(aspect, edgesToAdd, urnToRelationshipTypesBeingAdded);
-    }
-    if (aspectSpec.getName().equals(Constants.INPUT_FIELDS_ASPECT_NAME)) {
+      UpstreamLineage upstreamLineage = new UpstreamLineage(aspect.data());
+      updateFineGrainedEdgesAndRelationships(
+          urn,
+          upstreamLineage.getFineGrainedLineages(),
+          edgesToAdd,
+          urnToRelationshipTypesBeingAdded);
+    } else if (aspectSpec.getName().equals(Constants.INPUT_FIELDS_ASPECT_NAME)) {
       final InputFields inputFields = new InputFields(aspect.data());
       updateInputFieldEdgesAndRelationships(
           urn, inputFields, edgesToAdd, urnToRelationshipTypesBeingAdded);
+    } else if (aspectSpec.getName().equals(Constants.DATA_JOB_INPUT_OUTPUT_ASPECT_NAME)) {
+      DataJobInputOutput dataJobInputOutput = new DataJobInputOutput(aspect.data());
+      updateFineGrainedEdgesAndRelationships(
+          urn,
+          dataJobInputOutput.getFineGrainedLineages(),
+          edgesToAdd,
+          urnToRelationshipTypesBeingAdded);
     }
 
     Map<RelationshipFieldSpec, List<Object>> extractedFields =
@@ -347,7 +421,7 @@ public class UpdateIndicesService {
         edgeAndRelationTypes.getSecond();
 
     log.debug("Here's the relationship types found {}", urnToRelationshipTypesBeingAdded);
-    if (urnToRelationshipTypesBeingAdded.size() > 0) {
+    if (!urnToRelationshipTypesBeingAdded.isEmpty()) {
       for (Map.Entry<Urn, Set<String>> entry : urnToRelationshipTypesBeingAdded.entrySet()) {
         _graphService.removeEdgesFromNode(
             entry.getKey(),
@@ -617,13 +691,14 @@ public class UpdateIndicesService {
   }
 
   /**
-   * Allow internal use of the system entity client. Solves recursive dependencies between the
-   * UpdateIndicesService and the SystemJavaEntityClient
+   * Solves recursive dependencies between the UpdateIndicesService and EntityService
    *
-   * @param systemEntityClient system entity client
+   * @param aspectRetriever aspect Retriever
    */
-  public void setSystemEntityClient(SystemEntityClient systemEntityClient) {
-    this.systemEntityClient = systemEntityClient;
-    _searchDocumentTransformer.setEntityClient(systemEntityClient);
+  @Override
+  public void initializeAspectRetriever(@Nonnull AspectRetriever aspectRetriever) {
+    this.aspectRetriever = aspectRetriever;
+    this._entityRegistry = aspectRetriever.getEntityRegistry();
+    this._searchDocumentTransformer.setAspectRetriever(aspectRetriever);
   }
 }
